...
	<string name="list_pubkeyids_any">"Use any unlocked key"</string>

	<!-- Host nickname field preference title -->
	<string name="hostpref_nickname_title">"Nickname"</string>

	<!-- Host color category preference title -->
	<string name="hostpref_color_title">"Color category"</string>

	<!-- Host's default font size when opening the terminal in points (pt) -->
	<string name="hostpref_fontsize_title">"Font size (pt)"</string>

	<!-- Host pubkey usage preference title -->
	<string name="hostpref_pubkeyid_title">"Use pubkey authentication"</string>
...

	<!-- Button label to answer "Yes" to a yes/no prompt -->
	<string name="button_yes">"Yes"</string>
	<!-- Button label to answer "No" to a yes/no prompt -->
	<string name="button_no">"No"</string>

	<!-- Selection for a "local" port forward. E.g., connections to a port listening locally is forwarded to the remote end's listening port. -->
	<string name="portforward_local">"Local"</string>
	<!-- Selection for a "remote" port forward. E.g., connections to a port listening remotely is forwarded to the local end's listening port. -->
	<string name="portforward_remote">"Remote"</string>
	<!-- Selection for a "dynamic" port forward. E.g., connections to a port listening locally is forwarded based on the SOCKS protocol to an arbitrary remote host and port. -->
	<string name="portforward_dynamic">"Dynamic (SOCKS)"</string>
	<!-- Button that commits the port forward to be made from the Port Forward Creation dialog. -->
...
	<string name="list_menu_sortcolor">"Sort by color"</string>
	<!-- Selection choice to sort hosts by nickname. -->
	<string name="list_menu_sortname">"Sort by name"</string>
	<string name="list_menu_disconnect">"Disconnect All"</string>
	<string name="list_menu_settings">"Settings"</string>

	<string name="list_host_disconnect">"Disconnect"</string>
	<string name="list_host_edit">"Edit host"</string>
	<string name="list_host_portforwards">"Edit port forwards"</string>
	<string name="list_host_delete">"Delete host"</string>
	<!-- Note that the '\n' splits the lines so it's actually "quick-connect box below to connect" -->
	<string name="list_host_empty">"No hosts created yet."</string>

	<!-- Default screen rotation preference selection -->
	<string name="list_rotation_default">"Default"</string>
	<string name="list_rotation_land">"Force landscape"</string>
...
	<!-- Name for the backspace character -->
	<string name="list_delkey_backspace">"Backspace"</string>
	<!-- Name for the ASCII DEL character -->
	<string name="list_delkey_del">"Delete"</string>

	<string name="delete_message">"Are you sure you want to delete '%1$s'?"</string>
	<string name="delete_pos">"Yes, delete"</string>
	<string name="delete_neg">"Cancel"</string>

	<string name="disconnect_all_message">"Are you sure you want to disconnect from all connected hosts?"</string>
	<string name="disconnect_all_pos">"Yes, disconnect"</string>
	<string name="disconnect_all_neg">"Cancel"</string>

...
	<!-- Menu selection to reset colors to their defaults. -->
	<string name="menu_colors_reset">"Reset"</string>

	<!-- Displayed in the notification bar that connections are active -->
	<string name="app_is_running">"ConnectBot is running"</string>

	<string name="color_red">"red"</string>
	<string name="color_green">"green"</string>
	<string name="color_blue">"blue"</string>
	<string name="color_gray">"gray"</string>

	<!-- Very short label indicating the number next to it is "foreground color" number. -->
	<string name="colors_fg_label">"FG: %1$d"</string>
...
	<!-- Describes the icon of the "send tab character" button in the terminal view for
	     accessibility purposes. -->
	<string name="image_description_send_tab_character">Send TAB character.</string>

	<!-- Describes the icon of the "hide keyboard" button in the terminal view for accessibility
	     purposes. -->
	<string name="image_description_hide_keyboard">Hide keyboard.</string>

	<!-- Describes the icon of the "show keyboard" button in the terminal view for accessibility
	     purposes. -->
	<string name="image_description_show_keyboard">Show keyboard.</string>

	<!-- Describes the icon of the "Arrow up" button in the terminal view for accessibility
	     purposes. -->
	<string name="image_description_up">Arrow up</string>

	<!-- Describes the icon of the "Arrow down" button in the terminal view for accessibility
...
	<string name="hostpref_edit_host">Save host</string>
	<!-- Text for button which, when clicked, brings up an editor for adding a new pubkey. -->
	<string name="pubkey_add_new">Add new pubkey</string>
	<!-- Text for button which, when clicked, brings up picker to import an existing pubkey. -->
	<string name="pubkey_import_existing">Import existing pubkey</string>
	<!-- Text for dialog which explains that the host URI is invalid and asks to discard. -->
	<string name="discard_host_changes_message">Host URI is invalid. Would you like to discard changes?</string>
	<!-- Text for button which discards changes to the host. -->
	<string name="discard_host_button">Discard</string>
	<!-- Text for button which does not discard changes and keeps editing. -->
	<string name="discard_host_cancel_button">Keep editing</string>

	<!-- In a list of all the key pairs the user has generated or imported into their device.
	     Describes a key type of the RSA algorithm with a certain strength described in
	     number of bits (e.g., "RSA 2048-bit"). -->
	<string name="key_type_rsa_bits">RSA %d-bit</string>
	<!-- In a list of all the key pairs the user has generated or imported into their device.
...
