...

			<TextView
				android:id="@+id/protocol_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/protocol_spinner_label"
				android:labelFor="@+id/protocol_text"
				style="@style/ListItemFirstLineText.WithIcon"
				/>

			<TextView
				android:id="@id/protocol_text"
				android:layout_width="wrap_content"
...
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/quickconnect_field_container"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:accessibilityLiveRegion="polite"
				android:labelFor="@+id/quickconnect_field"
				>

				<com.google.android.material.textfield.TextInputEditText
					android:id="@id/quickconnect_field"
					android:layout_width="match_parent"
					android:layout_weight="1"
...
