...
		android:layout_height="fill_parent"
		android:gravity="center"
		android:text="@string/terminal_no_hosts_connected"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<io.slopshell.util.TerminalViewPager
		android:id="@+id/console_flip"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		/>

	<RelativeLayout
		android:id="@+id/console_password_group"
...
